force-app/main/default/objects/Apttus_Billing__ForecastedBillingOptions__c/Apttus_Billing__ForecastedBillingOptions__c.object-meta.xml
<CustomObject>
    <description>To store forecasting options like current term, renewal term etc.</description>
    <label>Forecasted Billing Options</label>
    <nameField>
        <displayFormat>BOP-{00000000}</displayFormat>
        <label>Option Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasted Billing Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>