force-app/main/default/objects/Apttus_Billing__ForecastedBillingOptions__c/fields/Apttus_Billing__ForecastTerm__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ForecastTerm__c</fullName>
    <description>Option used to specify the extent of the term. Use End Date or End Date + Renewal Term.
Only impacts Proposal Line Items with Auto Renewal set to true and Renewal Type set to Fixed.</description>
    <inlineHelpText>Option used to specify the extent of the term. Use End Date or End Date + Renewal Term.</inlineHelpText>
    <label>Forecast Term</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Term</fullName>
                <default>true</default>
                <label>Current Term</label>
            </value>
            <value>
                <fullName>Current Term + Renewal Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>