force-app/main/default/objects/Apttus_Billing__ForecastedBillingOptions__c/fields/Apttus_Billing__Message__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Message__c</fullName>
    <description>Store error message in case asynchronous forecast job throws exception</description>
    <inlineHelpText>Store error message in case asynchronous forecast job throws exception</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>