force-app/main/default/objects/Apttus_Billing__ForecastedBillingOptions__c/fields/Apttus_Billing__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Status__c</fullName>
    <description>Maintain status of forecast result</description>
    <inlineHelpText>Maintain status of forecast result</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Partially Failed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>